2015-11-12  Markus Gans  <guru.mail@muenster.de>
	* Add two new classes FCheckMenuItem and FRadioMenuItem 
	  for menu check marks and menu option marks (bullets)

2015-11-12  Markus Gans  <guru.mail@muenster.de>
	* Improve menu accelerator keys
	* Shows accelerator keys on the right side of the FMenu.

2015-11-08  Markus Gans  <guru.mail@muenster.de>
	* Activate the previous window in case if the menu is open and 
	  the mouse click has activated no window.

2015-11-07  Markus Gans  <guru.mail@muenster.de>
	* Improved menu focus handling
	* Menu supports newfont

2015-11-05  Markus Gans  <guru.mail@muenster.de>
	* Menu bar navigation without menu drop down

2015-11-03  Markus Gans  <guru.mail@muenster.de>
	* Improve keyboard shortcut handling in menus

2015-11-01  Markus Gans  <guru.mail@muenster.de>
	* First working version of an application menu, 
	  it uses the new classes FMenuBar, FMenu and FMenuItem 
	  (alpha state)

2015-10-29  Markus Gans  <guru.mail@muenster.de>
	* Support for the menu key

2015-10-23  Markus Gans  <guru.mail@muenster.de>
	* Color setting improvements

2015-10-22  Markus Gans  <guru.mail@muenster.de>
	* Make cursor visibility more standards compliant.

2015-10-18  Markus Gans  <guru.mail@muenster.de>
	* Hidden windows are now non-clickable

2015-10-17  Markus Gans  <guru.mail@muenster.de>
	* More faster header inline code
	* Improve getXTermFont() and getXTermTitle()
	* Newfont characters are now printable in FLabel, FMenuBar and FMenu.

2015-10-16  Markus Gans  <guru.mail@muenster.de>
	* Fixed: calculator behavior for negative values 
	  in trigonometric functions

2015-10-13  Markus Gans  <guru.mail@muenster.de>
	* Reduce the number of getParent() function calls for print operations

2015-10-11  Markus Gans  <guru.mail@muenster.de>
	* Improve attribute setting for bold, reverse and underline output
	* Better support for monochrom terminals

2015-10-10  Markus Gans  <guru.mail@muenster.de>