@@ -1,4 +1,10 @@
-2015-11-12  Markus Gans  <guru.mail@muenster.de>
+2015-11-22  Markus Gans  <guru.mail@muenster.de>
+	* Add sub-menu support
+
+2015-11-19  Markus Gans  <guru.mail@muenster.de>
+	* Add the missing resetXTermHighlightBackground method
+
+2015-11-15  Markus Gans  <guru.mail@muenster.de>
 	* Add two new classes FCheckMenuItem and FRadioMenuItem 
 	  for menu check marks and menu option marks (bullets)
 
